devold/force-app/main/default/objects/QBO_Quickbooks_App_Info__c/QBO_Quickbooks_App_Info__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Quickbooks App Info</label>
</CustomObject>