devold/force-app/main/default/objects/QBO_Quickbooks_App_Info__c/fields/QBO_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_Client_ID__c</fullName>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>