devold/force-app/main/default/objects/QBO_Quickbooks_App_Info__c/fields/QBO_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>QBO_Company_Id__c</fullName>
    <label>Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>