devold/force-app/main/default/objects/QBO_Quickbooks_App_Info__c/fields/QBO_Enable_Quickbooks__c.field-meta.xml
<CustomField>
    <fullName>QBO_Enable_Quickbooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Quickbooks</label>
    <type>Checkbox</type>
</CustomField>