devold/force-app/main/default/objects/QBO_Quickbooks_App_Info__c/fields/QBO_OAuth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>QBO_OAuth_Endpoint__c</fullName>
    <label>OAuth Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>