devold/force-app/main/default/objects/QBO_Quickbooks_App_Info__c/fields/QBO_Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>QBO_Redirect_URI__c</fullName>
    <label>Redirect URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>