devold/force-app/main/default/objects/QBO_Quickbooks_App_Info__c/fields/QBO_Scope__c.field-meta.xml
<CustomField>
    <fullName>QBO_Scope__c</fullName>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>